<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingLeft="30dip"
    android:paddingRight="30dip">

    <LinearLayout
        android:id="@+id/relative_date_naissance"
        style="@style/movieLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:visibility="gone">

        <com.bdc.ociney.view.textview.TypefacedTextView
            style="@style/movieLineTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/dateDeNaissance"
            android:textColor="@color/black50" />

        <com.bdc.ociney.view.textview.TypefacedTextView
            android:id="@+id/dateNaissance"
            style="@style/movieLineValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:ellipsize="end"
            android:lines="1"
            android:text="06 Novembre 1988"
            android:textColor="@color/black80" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/relative_lieu_naissance"
        style="@style/movieLine"
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <com.bdc.ociney.view.textview.TypefacedTextView
            style="@style/movieLineTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/lieu"
            android:textColor="@color/black50" />

        <com.bdc.ociney.view.textview.TypefacedTextView
            android:id="@+id/lieuNaissance"
            style="@style/movieLineValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Scottdale, Arizona, Etats-Unis"
            android:textColor="@color/black80" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/metiers_container"
        style="@style/movieLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:visibility="gone">

        <com.bdc.ociney.view.textview.TypefacedTextView
            style="@style/movieLineTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/metier"
            android:textColor="@color/black50" />

        <com.bdc.ociney.view.textview.TypefacedTextView
            android:id="@+id/role"
            style="@style/movieLineValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="Acteur, scénariste, réalisateur, compositeur, producteur exécutif, chanteur, "
            android:textColor="@color/black80" />
    </LinearLayout>
</LinearLayout>